<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_press"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/ll_header"
        android:gravity="center_vertical"
        android:layout_height="50dp"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/headerView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                fresco:placeholderImage="@drawable/ic_default_user_head"
                fresco:placeholderImageScaleType="centerCrop"
                fresco:roundAsCircle="true"
                fresco:roundingBorderColor="@color/transparent"
                fresco:roundingBorderWidth="1dp" />

            <ImageView
                android:id="@+id/iv_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_v_meipai_60_and_72"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/rl_header"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white88"
                android:textSize="@dimen/normal_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dot_gray"
                    android:textSize="@dimen/smallest_text_size" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/add_follow_shape"
            android:drawableLeft="@drawable/ic_add_findfriend"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="4dp"
            android:text="@string/add_follow"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
        android:id="@+id/jc_video_player"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_header"
        android:minHeight="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/tv_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@id/jc_video_player"
        android:text=""
        android:textColor="@color/white88"
        android:textSize="@dimen/content_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/tv_describe"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dislike_30x30" />

            <TextView
                android:id="@+id/tv_like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:textColor="@color/dot_gray"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/dot_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_feed_repost" />

            <TextView
                android:id="@+id/tv_comment_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/repost"
                android:textColor="@color/dot_gray"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/dot_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_feed_share" />

            <TextView
                android:id="@+id/tv_share_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/share"
                android:textColor="@color/dot_gray"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>